--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./test.js"></script>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <p>Number 1:<input type="text" id="n1"></p>
